Fix bug invisible required fields, cleanup code

--- a/app/frontend/assets/styles/components/_modal.scss
+++ b/app/frontend/assets/styles/components/_modal.scss
@@ -23,11 +23,6 @@
 body.show-modal {
     @include bodyModal();
 
-    .modal-backdrop {
-        display: block;
-        opacity: 0.5;
-    }
-
     .modal.show {
         @include modalVisible();
     }
